--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     float: left;
 }
 header {
-    background-color: #0ef41a;
+    background-color: #6e7ff8;
 }
 nav {
     background-color: #f48c0d;
